# project_projoppr

./: .clangd  .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  compile_commands.json  project_projoppr.sln
project_projoppr/: main.cpp  project_projoppr.vcxproj  project_projoppr.vcxproj.filters
project_projoppr/menu/: menu.cpp  menu.h
project_projoppr/x64/Debug/: project_projoppr.exe.recipe  project_projoppr.ilk  vc143.idb
project_projoppr/x64/Debug/project_projoppr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  project_projoppr.lastbuildstate
project_projoppr/x64/Release/: project_projoppr.exe.recipe  project_projoppr.iobj  project_projoppr.ipdb
project_projoppr/x64/Release/project_projoppr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  project_projoppr.lastbuildstate
src/: compile_commands.json  main.cpp
src/game/: game.cpp  game.h
src/menu/: menu.cpp  menu.h
